<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.cefriel</groupId>
  <artifactId>chimera</artifactId>
  <version>3.0.8-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>com.cefriel:chimera</name>
  <description>Chimera offers a set of Apache Camel components to define schema and data trasformation pipelines based on Semantic Web solutions.</description>
  <url>https://github.com/cefriel/chimera/</url>

  <modules>
    <module>camel-chimera-graph</module>

    <module>camel-chimera-rmlmapper</module>

    <module>camel-chimera-mapping-template</module>
  </modules>

  <properties>
    <camel.version>3.16.0</camel.version>
    <rdf4j.version>4.2.2</rdf4j.version>
    <mapping-template.version>2.1.2</mapping-template.version>
    <rmlmapper.version>1.1.0</rmlmapper.version>
    <camel-test-spring-junit.version>3.16.0</camel-test-spring-junit.version>
    <camel-bom.version>3.16.0</camel-bom.version>
    <slf4j.version>2.17.2</slf4j.version>
  </properties>

  <scm>
    <connection>scm:git:https://github.com/cefriel/chimera.git</connection>
    <developerConnection>scm:git:https://github.com/cefriel/chimera.git</developerConnection>
    <url>https://github.com/cefriel/chimera</url>
    <tag>HEAD</tag>
  </scm>

  <licenses>
    <license>
      <name>The Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>Mario Scrocca</name>
      <email>mario.scrocca@cefriel.com</email>
      <organization>Cefriel</organization>
      <organizationUrl>https://www.cefriel.com/</organizationUrl>
    </developer>
    <developer>
      <name>Marco Grassi</name>
      <email>marco.grassi@cefriel.com</email>
      <organization>Cefriel</organization>
      <organizationUrl>https://www.cefriel.com/</organizationUrl>
    </developer>
    <developer>
      <name>Alessio Carenini</name>
      <email>alessio.carenini@cefriel.com</email>
      <organization>Cefriel</organization>
      <organizationUrl>https://www.cefriel.com/</organizationUrl>
    </developer>
  </developers>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.cefriel</groupId>
        <artifactId>camel-chimera-graph</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.cefriel</groupId>
        <artifactId>camel-chimera-mapping-template</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.cefriel</groupId>
        <artifactId>mapping-template</artifactId>
        <version>${mapping-template.version}</version>
      </dependency>
      <dependency>
        <groupId>com.cefriel</groupId>
        <artifactId>camel-chimera-rmlmapper</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.cefriel</groupId>
        <artifactId>rmlmapper</artifactId>
        <version>${rmlmapper.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.camel</groupId>
        <artifactId>camel-test-spring-junit5</artifactId>
        <version>${camel-test-spring-junit.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.rdf4j</groupId>
        <artifactId>rdf4j-storage</artifactId>
        <version>${rdf4j.version}</version>
        <type>pom</type>
      </dependency>
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-slf4j-impl</artifactId>
        <version>${slf4j.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>ossrh</id>
      <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>

  <build>
    <defaultGoal>install</defaultGoal>
    <pluginManagement>
      <plugins>
	<plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
          <configuration>
            <source>17</source>
            <target>17</target>
          </configuration>
	</plugin>      
	<plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <version>3.0.1</version>
          <configuration>
	    <tagNameFormat>v@{project.version}</tagNameFormat>
	    <autoVersionSubmodules>true</autoVersionSubmodules>
	    <useReleaseProfile>false</useReleaseProfile>
	    <releaseProfiles>release</releaseProfiles>
	    <goals>deploy</goals>
            <checkModificationExcludes>
              <checkModificationExclude>pom.xml</checkModificationExclude>
            </checkModificationExcludes>
          </configuration>
	</plugin>
	<plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.2.1</version>
          <executions>
            <execution>
              <id>attach-sources</id>
              <goals>
		<goal>jar-no-fork</goal>
              </goals>
            </execution>
          </executions>
	</plugin>
	<plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.5.0</version>
          <executions>
            <execution>
              <id>attach-javadocs</id>
              <goals>
		<goal>jar</goal>
              </goals>
            </execution>
          </executions>
	</plugin>
	<plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-gpg-plugin</artifactId>
          <version>1.5</version>
          <executions>
            <execution>
              <id>sign-artifacts</id>
              <phase>verify</phase>
              <goals>
		<goal>sign</goal>
              </goals>
            </execution>
          </executions>
	</plugin>
	<plugin>
          <groupId>org.sonatype.plugins</groupId>
          <artifactId>nexus-staging-maven-plugin</artifactId>
          <version>1.6.13</version>
          <extensions>true</extensions>
          <configuration>
            <serverId>ossrh</serverId>
            <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
            <autoReleaseAfterClose>true</autoReleaseAfterClose>
          </configuration>
	</plugin>
	<plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.0</version>
	</plugin>
	<plugin>
          <groupId>org.apache.camel</groupId>
          <artifactId>camel-component-maven-plugin</artifactId>
          <version>3.16.0</version>
          <configuration>
            <sourcesOutputDir>src/generated/java</sourcesOutputDir>
            <resourcesOutputDir>src/generated/resources</resourcesOutputDir>
          </configuration>
          <executions>
            <execution>
              <id>generate</id>
              <goals>
		<goal>generate</goal>
              </goals>
              <phase>process-classes</phase>
            </execution>
          </executions>
	</plugin>
	<plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.2.0</version>
          <configuration>
            <encoding>UTF-8</encoding>
          </configuration>
	</plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-compiler-plugin</artifactId>
      </plugin>
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-release-plugin</artifactId>
      </plugin>
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-surefire-plugin</artifactId>
      </plugin>

    </plugins>
  </build>
  <profiles>
    <profile>
      <id>release</id>
      <build>
	<plugins>
	  <plugin>
	    <groupId>org.sonatype.plugins</groupId>
	    <artifactId>nexus-staging-maven-plugin</artifactId>
	  </plugin>
	  <plugin>
	    <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-source-plugin</artifactId>
	  </plugin>
	  <plugin>
	    <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-javadoc-plugin</artifactId>
	  </plugin>
	  <plugin>
	    <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-gpg-plugin</artifactId>
	  </plugin>
	</plugins>
      </build>
    </profile>
  </profiles>
</project>
